--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "a small effort to curb aids",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon ./backend/server.js"
+    "start": "nodemon server.js"
   },
   "author": "atrijo anukriti karandeep",
   "license": "ISC",
